--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="hostname" content=""/>
   <meta name="keywords" content="template,draft,parser"/><meta property="og:type" content="website"/>
   <meta property="og:site_name" content="Drawght"/>
-  <meta property="og:title" content="About Drawght"/>
+  <meta property="og:title" content="Drawght"/>
   <meta property="og:description" content="A data handler for texts without logical statements."/>
   <meta property="og:url" content="https://github.com/drawght/drawght.github.io#readme"/>
   <meta property="og:image" content=""/>
@@ -17,25 +17,31 @@
   <meta property="og:locale:alternate" content="pt_BR"/>
   <meta property="og:locale:alternate" content="pt_PT"/>
   <link rel="stylesheet" type="text/css" href="/assets/styles/default.css"/>
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/@highlightjs/cdn-assets@11.1.0/styles/base16/solarized-dark.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/@highlightjs/cdn-assets@11.1.0/styles/base16/solarized-light.min.css"/>
 
   <link rel="shortcut icon" type="image/ico" href="/assets/images/favicon.ico" />
   <link rel="icon" type="image/ico" href="/assets/images/favicon.ico" />
 
-  <title>Drawght - About Drawght</title>
+  <title>Drawght - Drawght</title>
 </head>
 <body>
   <aside>
     <main>
       <figure>
-        <img src="/assets/images/brand.svg"/>
+        <a href="/"><img src="/assets/images/brand.svg"/></a>
         <figcaption>Drawght</figcaption>
-      </figure><p>A data handler for texts without logical statements.</p>
-<p>Parsers:</p>
+      </figure><p>
+A data handler for texts without logical statements.
+</p>
+
+<p>
+Parsers:
+</p>
+
 <ul>
-<li><a href="https://github.com/drawght/drawght-parser-nodejs#readme">JavaScript/NodeJS</a></li>
-<li><a href="https://github.com/drawght/drawght-parser-ruby#readme">Ruby</a></li>
-<li><a href="https://github.com/drawght/drawght-parser-go#readme">Go</a></li>
+	<li><a href="/parsers/javascript/">JavaScript</a></li>
+	<li><a href="/parsers/ruby/">Ruby</a></li>
+	<li><a href="/parsers/go/">Go</a></li>
 </ul>
 
     </main>
@@ -46,7 +52,8 @@
     </footer>
   </aside>
 
-  <main><h1>About Drawght</h1>
+  <main><article>
+      <h1>Drawght</h1>
 <p>Drawght is a data handler for texts without logical statements. The goal is
 to use a dataset (such as the subject of a text) to draft a document
 template. It can be considered a mini template processor.</p>
@@ -242,6 +249,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 </code></pre>
-</main>
+
+    </article></main>
 </body>
 </html>
