--- a/parsers/go/index.html
+++ b/parsers/go/index.html
@@ -39,15 +39,20 @@ Parsers:
 </p>
 
 <ul>
+	<li><a href="/parsers/go/">Go</a></li>
 	<li><a href="/parsers/javascript/">JavaScript</a></li>
 	<li><a href="/parsers/ruby/">Ruby</a></li>
-	<li><a href="/parsers/go/">Go</a></li>
 </ul>
 
     </main>
 
-    <footer><p>Drawght was developed by <a href="https://hallison.dev.br">Hallison Batista</a></p>
-<p>Builded with <a href="//11ty.dev">11ty</a> v0.12.1</p>
+    <footer><p>
+Drawght was developed by <a href="https://hallison.dev.br">Hallison Batista</a>.
+</p>
+
+<p>
+Builded with <a href="//11ty.dev">11ty</a> v0.12.1.
+</p>
 
     </footer>
   </aside>
